// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextCounter renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#25282D",
            },
            Object {
              "fontFamily": "Poppins-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "textAlign": "left",
            },
          ],
          Object {
            "color": "#878787",
          },
        ]
      }
    >
      11/100
    </Text>
  </View>
</View>
`;

exports[`component: TextCounter renders maxChar reached 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#25282D",
            },
            Object {
              "fontFamily": "Poppins-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "textAlign": "left",
            },
          ],
          Object {
            "color": "#FD565F",
          },
        ]
      }
    >
      11/10
    </Text>
  </View>
</View>
`;

exports[`component: TextCounter renders maxCharReaded 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flexDirection": "row",
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#25282D",
            },
            Object {
              "fontFamily": "Poppins-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "lineHeight": 16,
              "textAlign": "left",
            },
          ],
          Object {
            "color": "#FD565F",
          },
        ]
      }
    >
      11/10
    </Text>
  </View>
</View>
`;
